# tree_height_analysis_57

./: .bumpver.toml  .bumpversion.cfg  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: build-docs.yml  bump-and-release.yml  bump-version.yml  ci.yml  final-check.yml  publish-testpypi.yml  release.yml  status-check.yml
docs/: requirements-docs.txt
docs/source/: conf.py  index.rst  modules.rst  requirements-docs.txt  tree_height_analysis_57.rst  usage.rst
sample_dataset/: Code.py  Homework1.py  trees_1.txt  trees_10k.txt  trees_2.txt  trees_complex.txt  trees_turkiye.txt
src/tree_height_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tree_height_analysis_57/: __init__.py  analyzer.py  avarage_tree_height.py  distancefunction.py
tests/: test_analyzer.py
