[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_height_analysis"
version = "0.1.20"
description = "Analyze tree heights from tabular geographic data"
readme = "README.md"
authors = [
  { name="İbrahim Topcu", email="ibrahimtpc93@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
  "pytest"
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "furo",
  "sphinx-autodoc-typehints"
]

[project.urls]
"Homepage" = "https://github.com/ibrahimtopcu/tree_height_analysis"
"Documentation" = "https://tree-height-analysis.readthedocs.io"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump: version {old_version} → {new_version}"
tag_message = "Release {new_version}"
tag_scope = "default"
