[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_height_analysis"
version = "0.1.23"
description = "Analyze tree heights from tabular geographic data"
readme = "README.md"
authors = [
  { name = "İbrahim Topcu", email = "ibrahimtpc93@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "pytest"
]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "furo",
  "sphinx-autodoc-typehints"
]

[project.urls]
"Homepage" = "https://github.com/ibrahimtopcu/tree_height_analysis"
"Documentation" = "https://tree-height-analysis.readthedocs.io"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpversion]
current_version = "0.1.23"
commit = true
tag = true

[bumpversion:file:pyproject.toml]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[bumpversion:file:docs/source/conf.py]
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'
