[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_height_analysis_57"
description = "Analyze tree heights from tabular geographic data"
readme = "README.md"
authors = [{ name = "İbrahim Topcu", email = "ibrahimtpc93@gmail.com" }]
license = "MIT"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = ["pytest"]

[project.optional-dependencies]
docs = [
  "sphinx>=7.0",
  "furo",
  "sphinx-autodoc-typehints"
]

[project.urls]
Homepage = "https://github.com/ibrahimtopcu11/tree_height_analysis_57"
Documentation = "https://tree-height-tree_height_analysis_57.readthedocs.io"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tree_height_analysis_57"]

[tool.setuptools.dynamic]
version = {attr = "tree_height_analysis_57.__version__"}
